# cryptopals-rust

./: .gitignore  LICENSE  README.md
aes/: Cargo.toml
aes/src/: lib.rs
bignum/: Cargo.toml
bignum/src/: lib.rs
challenges/: Cargo.toml
challenges/data/: 6_test.txt
challenges/src/: errors.rs  helper.rs  lib.rs  main.rs  mersenne.rs  prefix_suffix_oracles.rs  set1.rs  set2.rs  set3.rs  set4.rs  set5.rs  set6.rs
challenges/src/set1/: challenge01.rs  challenge02.rs  challenge03.rs  challenge04.rs  challenge05.rs  challenge06.rs  challenge07.rs  challenge08.rs  challenge1.rs  challenge4.rs  challenge6.rs  challenge7.rs  mod.rs
challenges/src/set2/: challenge09.rs  challenge10.rs  challenge11.rs  challenge12.rs  challenge13.rs  challenge14.rs  challenge15.rs  challenge16.rs  mod.rs
challenges/src/set3/: challenge17.rs  challenge18.rs  challenge19_20.rs  challenge21.rs  challenge22.rs  challenge23.rs  challenge24.rs  mod.rs
challenges/src/set4/: challenge25.rs  challenge26.rs  challenge27.rs  challenge28.rs  challenge29_30.rs  challenge31.rs  challenge32.rs  hmac_client.rs  hmac_server.rs  mod.rs
challenges/src/set5/: challenge33.rs  challenge34_35.rs  challenge36.rs  challenge37.rs  challenge38.rs  challenge39.rs  challenge40.rs  mod.rs
challenges/src/set6/: challenge41.rs  challenge42.rs  challenge43.rs  challenge44.rs  challenge45.rs  challenge46.rs  challenge47_48.rs  mod.rs
dh/: Cargo.toml
dh/src/: algo.rs  client.rs  communication.rs  errors.rs  handshake.rs  lib.rs  mitm.rs  mitm_handshake.rs  mitm_session.rs  server.rs  session.rs
dsa/: Cargo.toml
dsa/src/: lib.rs
hmac_client/: Cargo.toml  log.txt
hmac_client/src/: lib.rs
hmac_server/: Cargo.toml
hmac_server/src/: lib.rs
mac/: Cargo.toml
mac/src/: lib.rs
rsa/: Cargo.toml
rsa/src/: lib.rs
serialize/: Cargo.toml
serialize/src/: lib.rs
srp/: Cargo.toml
srp/src/: algo.rs  client.rs  communication.rs  lib.rs  mitm.rs  server.rs
unstable_features/: Cargo.toml
unstable_features/src/: lib.rs
xor/: Cargo.toml
xor/src/: lib.rs
