[package]

name = "matasano"
version = "0.0.1"
authors = ["ph"]

[lib]
name = "challenges"
path = "src/lib.rs"

[dependencies]
block-buffer = "0.3"
byteorder = "0.5"
failure = "0.1"
fake-simd = "0.1"
md4 = "0.7.0"
num = "0.1"
rand = "0.3"
sha-1 = "0.7.0"

[dependencies.aes]
path = "../aes"

[dependencies.bignum]
path = "../bignum"

[dependencies.diffie_hellman]
path = "../dh"

[dependencies.hmac_client]
path = "../hmac_client"

[dependencies.hmac_server]
path = "../hmac_server"

[dependencies.mac]
path = "../mac"

[dependencies.rsa]
path = "../rsa"

[dependencies.dsa]
path = "../dsa"

[dependencies.serialize]
path = "../serialize"

[dependencies.srp]
path = "../srp"

[dependencies.xor]
path = "../xor"
