[package]
name = "matasano"
version = "0.2.0"
authors = ["ph"]
edition = "2018"

[lib]
name = "challenges"
path = "src/lib.rs"

[dependencies]
block-buffer = "0.3"
byteorder = "0.5"
fake-simd = "0.1"
md4 = "0.7.0"
num = "0.1"
rand = "0.3"
sha-1 = "0.7.0"

hyper = "0.10"
iron = "0.6"
params = "0.8"

[dependencies.aes]
path = "../aes"

[dependencies.bignum]
path = "../bignum"

[dependencies.diffie_hellman]
path = "../dh"

[dependencies.mac]
path = "../mac"

[dependencies.rsa]
path = "../rsa"

[dependencies.dsa]
path = "../dsa"

[dependencies.serialize]
path = "../serialize"

[dependencies.srp]
path = "../srp"

[dependencies.xor]
path = "../xor"
