[package]

name = "diffie_hellman"
version = "0.0.1"
authors = ["ph"]

[dependencies]
byteorder = "0.5"
failure = "0.1"
num = "0.1"
rand = "0.3" 
result = "1.0.0"
sha1 = "0.2"

[dependencies.aes]
path = "../aes"

[dependencies.bignum]
path = "../bignum"

[dependencies.serialize]
path = "../serialize"
