[package]

name = "diffie_hellman"
version = "0.0.1"
authors = ["ph"]

[dependencies]
byteorder = "0.5"
digest = "0.7"
failure = "0.1"
num = "0.1"
rand = "0.3" 
result = "1.0.0"
sha-1 = "0.7"

[dependencies.aes]
path = "../aes"

[dependencies.bignum]
path = "../bignum"

[dependencies.serialize]
path = "../serialize"
